Fixed scrollbar

--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -79,15 +79,15 @@ span[class*="botTag"] {
   }
 }
 
-.scroller-wrap {
-  &.guild-channels::-webkit-scrollbar { display: none; }
-  .scroller::-webkit-scrollbar { width: 14px; }
-  .scroller::-webkit-scrollbar-track-piece {
+div[class*="scrollerWrap-"] {
+  &.guild-channels::-webkit-scrollbar { display: none !important; }
+  div[class*="scroller-"]::-webkit-scrollbar { width: 14px !important; }
+  div[class*="scroller-"]::-webkit-scrollbar-track-piece {
     background-color: rgba(0, 0, 0, 0) !important;
     border: 4px solid rgba(255, 255, 255, 0) !important;
   }
 
-  .scroller::-webkit-scrollbar-thumb {
+  div[class*="scroller-"]::-webkit-scrollbar-thumb {
     background-color: rgba(225, 225, 225, .1) !important;
     border: 4px solid rgba(255, 255, 255, 0) !important;
     display: initial;
