--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,5 +1,5 @@
 // Version
-$version: '1.3.3';
+$version: '1.3.4';
 
 // Show the credits
 @import 'assets/credits';
